--- a/public/css/style.css
+++ b/public/css/style.css
@@ -637,6 +637,7 @@ a.more {
   display: none;
 }
 
+
 @media (min-width: 768px) {
   .testimonial-slider-wrap #testimonial-nav {
     display: block;
@@ -846,7 +847,7 @@ a.more {
 
 .footer-section .sofa-img {
   position: absolute;
-  top: -200px;
+  top: -150px;
   z-index: 1;
   right: 0;
 }
@@ -1031,4 +1032,17 @@ textarea {
   height: 50px;
   border-radius: 50%;
   background: rgba(59, 93, 80, 0.2);
+}
+
+.admin h1 {
+  background-color: #3b5d50;
+}
+.my-bg{
+  background-color:#3b5d50 ;
+}
+.admin button{
+  width: 200px;
+  height: 35px;
+  border-radius: 20px;
+  border: none;
 }
